・整理 ・マイグレーション整理

--- a/License/LPIC/LPIC1/101/2.Linuxのインストールとパッケージ管理.md
+++ b/License/LPIC/LPIC1/101/2.Linuxのインストールとパッケージ管理.md
@@ -1,5 +1,14 @@
 # Linuxのインストールとパッケージ管理
 
+- ハードディスクのレイアウト設計  
+- ブートローダーのインストール  
+- 共有ライブラリ管理  
+- Debianパッケージ管理  
+- RPMパッケージ管理  
+- 仮想化のゲストOSとしてのLinux  
+
+---
+
 ## ハードディスクのレイアウト設計
 
 ---
