--- a/License/LPIC/LPIC1/101/5.デバイスとLinuxファイルシステム.md
+++ b/License/LPIC/LPIC1/101/5.デバイスとLinuxファイルシステム.md
@@ -1,5 +1,12 @@
 # デバイスとLinuxファイルシステム
 
+- パーティションとファイルシステムの作成  
+- ファイルシステムの管理  
+- ファイルシステムのマウントとアンマウント  
+- ファイルの配置と検索  
+
+---
+
 ## パーティションとファイルシステムの作成
 
 ---
