--- a/License/LPIC/LPIC1/102/10.必須システムサービス.md
+++ b/License/LPIC/LPIC1/102/10.必須システムサービス.md
@@ -1,5 +1,10 @@
 # 10.必須システムサービス
 
+- システムクロックの設定  
+- システムログの設定  
+- メール管理(メールシステム)  
+- プリンタ管理  
+
 ``` txt : システムクロックの設定
 ・date :: システムクロックの参照や設定を行うコマンド。
 ※date [MMDDhhmm[CC[YY]][.ss]](MMは月、DDは日、hhは時、mmは分、CCは西暦の上2桁、YYは西暦の下2桁、ssは秒)
