--- a/License/LPIC/LPIC1/102/11.ネットワークの基礎.md
+++ b/License/LPIC/LPIC1/102/11.ネットワークの基礎.md
@@ -1,5 +1,10 @@
 # 11.ネットワークの基礎
 
+- TCP/IPの基礎  
+- ネットワークの設定  
+- ネットワークのトラブルシューティング  
+- DNS  
+
 ``` txt : TCP/IPの基礎
 ・IPv4、IPv6
 ・ユニキャスト、エニーキャスト、マルチキャスト、ブロードキャスト
@@ -78,6 +83,8 @@ E   :: 240.0.0.0 - 255.255.255.255
 ・whois    :: 調べたいドメイン名を指定して、whoisデータベースに問い合わせるコマンド。
 ・nslookup :: WindowsにおいてDNSサーバに名前解決を問い合わせるWindowsのコマンド。
 ```
+
+---
 
 ## TCP/IPの基礎
 
