--- a/License/LPIC/LPIC1/102/12.セキュリティ.md
+++ b/License/LPIC/LPIC1/102/12.セキュリティ.md
@@ -1,5 +1,11 @@
 # 12.セキュリティ
 
+- ホストレベルのセキュリティ  
+- ユーザーに対するセキュリティ管理  
+- OpenSSH  
+- GnuPGによる暗号化  
+- その必要なコマンド  
+
 ``` txt : ホストレベルのセキュリティ
 ・スーパーサーバー :: サーバープログラムを管理するプログラム。
 ・xinetd           :: スーパーサーバデーモン。ネットワークからのリクエストを受け付けるデーモン。  
@@ -85,6 +91,8 @@ SSHクライアント側の設定ファイル。
 ・w             :: 現在、システムに誰がログインしていて、何を実行しているのかを表示するコマンド。
 ・who           :: システムに誰がログインしているかを表示するコマンド。  
 ```
+
+---
 
 ## ホストレベルのセキュリティ
 
