--- a/License/LPIC/LPIC1/102/7.シェルとシェルスクリプト.md
+++ b/License/LPIC/LPIC1/102/7.シェルとシェルスクリプト.md
@@ -1,5 +1,8 @@
 # 7.シェルとシェルスクリプト
 
+- シェル環境のカスタマイズ  
+- シェルスクリプト  
+
 ``` txt : シェル環境のカスタマイズ
 ・alias    :: エイリアスを設定するコマンド。
               本来のコマンドを実行したい場合は頭に「\(バックスラッシュ)」を付けて実行するか、パス付きで実行する。
@@ -79,6 +82,8 @@
 ・||      :: command1が失敗した場合のみcommand2を実行する。  
 ・;       :: コマンドを続けて実行する。  
 ```
+
+---
 
 ## シェル環境のカスタマイズ
 
