--- a/License/LPIC/LPIC1/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/License/LPIC/LPIC1/102/8.ユーザインターフェイスとデスクトップ.md
@@ -1,5 +1,9 @@
 # 8.ユーザーインターフェースとデスクトップ
 
+- X11のインストールと設定  
+- ディスプレイマネージャーの設定  
+- アクセシビリティ  
+
 ``` txt : X11のインストールと設定
 ・X Window System(X,X11) :: LinuxでGUIを実現するための技術。GUIを提供するためのシステム。
 ・Xサーバ       :: キーボードやディスプレイなどのハードウェアを管理するソフトウェア。
@@ -83,6 +87,8 @@ startxコマンド → xinitコマンド → .xinitrc → /etc/X11/xinit/xinitrc
 ・orca               :: スクリーンリーダーや拡大鏡を提供するGNOMEの機能。
 ・emacspeak          :: Emacsのスクリーンリーダー。  
 ```
+
+---
 
 ## X11のインストールと設定
 
