--- a/License/LPIC/LPIC1/102/9.管理タスク.md
+++ b/License/LPIC/LPIC1/102/9.管理タスク.md
@@ -1,5 +1,9 @@
 # 9.管理タスク
 
+- ユーザーとグループの管理  
+- ジョブスケジューリング  
+- ローカライゼーションと国際化  
+
 ``` txt : ユーザーとグループの管理
 ・/etc/passwd :: ユーザーアカウント情報(※ユーザーのプライマリグループの指定も)が格納されているファイル。パーミッションは「644(-rw-r--r--)」。
 ・/etc/shadow :: 暗号化されているパスワードや、パスワードの有効期限に関する情報が格納されているファイル。  
