--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1022,7 +1022,7 @@ dotnet swagger cli
 
 ---
 
-## linuxで.Netコンソールアプリを実行する方法
+## Linuxで.Netコンソールアプリを実行する方法
 
 1. コンソールアプリを作成する  
 `dotnet new console`  
@@ -1335,6 +1335,58 @@ Windows認証 = WindowではローカルのSQLServerにアクセス → Linux上
 リンク先の人も消したら出てこなくなったと言っている。  
 
 [System.Data.SqlClient.SqlException: 'System.Net.Security.Native assembly:\<unknown assembly> type:\<unknown type> member:(null)](https://learn.microsoft.com/en-us/answers/questions/979587/systemdatasqlclientsqlexception-39systemnetsecurit.html)  
+
+---
+
+## appsettings.jsonの指定の仕方
+
+``` cs
+using Microsoft.EntityFrameworkCore;
+
+var builder = WebApplication.CreateBuilder(args);
+builder.Services.AddDbContext<DatContext>(options =>options.UseSqlServer("name=ConnectionStrings:DefaultConnection"));
+var app = builder.Build();
+
+app.MapGet("/", () => "Hello World!");
+
+app.Run();
+```
+
+``` cs
+using Microsoft.EntityFrameworkCore;
+
+var builder = WebApplication.CreateBuilder(args);
+builder.Services.AddDbContext<DbContext>(options => options.UseSqlServer(builder.Configuration["DefaultSettings"] ?? ""));
+_ = builder.Configuration["DefaultSettings"];
+_ = builder.Configuration.GetConnectionString("DefaultSettings");
+var app = builder.Build();
+
+app.MapGet("/", () => "Hello World!");
+
+app.Run();
+```
+
+コンソールアプリの場合
+
+``` cs
+using Microsoft.EntityFrameworkCore;
+using Microsoft.Extensions.Configuration;
+using Microsoft.Extensions.DependencyInjection;
+using Microsoft.Extensions.Hosting;
+
+using IHost host = Host.CreateDefaultBuilder(args)
+    .ConfigureServices((hostContext, services) =>
+    {
+        services
+            .AddDbContext<AppDbContext>(options =>
+            {
+                options.UseSqlServer(hostContext.Configuration.GetConnectionString("DefaultConnection"));
+            });
+    })
+    .Build();
+```
+
+[How to use appsettings.json in Asp.net core 6 Program.cs file](https://stackoverflow.com/questions/69390676/how-to-use-appsettings-json-in-asp-net-core-6-program-cs-file)  
 
 ---
 
