--- a/License/LPIC/LPIC1/101/4.ファイルとプロセスの管理.md
+++ b/License/LPIC/LPIC1/101/4.ファイルとプロセスの管理.md
@@ -1,5 +1,14 @@
 # ファイルとプロセスの管理
 
+- 基本的なファイル管理  
+- パーミッションの設定  
+- ファイルの所有者管理  
+- ハードリンクとシンボリックリンク  
+- プロセス管理  
+- プロセスの実行優先度  
+
+---
+
 ## 基本的なファイル管理
 
 ---
