・lipc整理 ・マイグレーション ・整理

--- a/EntityFramework/Bundle/最小実装.md
+++ b/EntityFramework/Bundle/最小実装.md
@@ -1,4 +1,4 @@
-# bundleの最小実装
+# バンドルの最小実装
 
 バンドルを生成するためだけの一連の流れ。  
 実行しても何もしないバンドルが生成される。  
@@ -8,9 +8,9 @@
 ## 開発環境  
 
 - Windows10  
-- .Net 6  
-- gitbash or CommandPrompt  
-- vscode or gitbash_vim  
+- .Net 6以上  
+- GitBash or CommandPrompt  
+- VSCode or GitBash_vim  
 
 ---
 
@@ -30,8 +30,8 @@ NuGetパッケージのインストール
 
 Program.csを以下のように書き換える  
 
-- `using Microsoft.EntityFrameworkCore;`の追加
-- `builder.Services.AddDbContext<DbContext>(options =>options.UseSqlServer());`を追加
+- `using Microsoft.EntityFrameworkCore;`の追加  
+- `builder.Services.AddDbContext<DbContext>(options =>options.UseSqlServer());`を追加  
 
 ``` cs
 using Microsoft.EntityFrameworkCore;
@@ -46,7 +46,7 @@ app.Run();
 ```
 
 バンドル発行  
-`dotnet ef migrations bundle`
+`dotnet ef migrations bundle`  
 
 ---
 
