--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1390,6 +1390,39 @@ using IHost host = Host.CreateDefaultBuilder(args)
 
 ---
 
+## テーブルの存在確認
+
+OBJECT_ID関数  
+
+``` sql
+IF OBJECT_ID (N'テーブル名', N'U') IS NOT NULL  
+    --テーブルが見つかったときの処理
+ELSE
+    --テーブルが見つからなかったときの処理
+```
+
+2016以降のバージョンでは命令に繋げて記述可能  
+
+``` sql
+DROP TABLE IF EXISTS テーブル名
+```
+
+[SQLServer テーブルが存在していたらdropしてcreateする方法](https://note.mokuzine.net/sqlserver-if-exist-table/)  
+[【SQL Server】テーブルの存在チェックするやり方を解説します](https://www.tairax.com/entry/Microsoft-SQL-Server/Check-existence-of-table)  
+
+---
+
+## SQLを止める方法
+
+GOTOするかTHROWする。  
+RETURNはストアドでしか使えない。  
+
+検索文字列 : sqlserver t-sql 途中終了  
+
+[T-SQL STOP or ABORT command in SQL Server](https://stackoverflow.com/questions/2028072/t-sql-stop-or-abort-command-in-sql-server)  
+
+---
+
 ``` cs
     [HttpGet("GetInt/{id}")]
     public ActionResult<int?> GetInt(int? id)
