・コードブロックを2つ並べる ・スナップショットについて

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1423,6 +1423,51 @@ RETURNはストアドでしか使えない。
 
 ---
 
+## マークダウンでコードブロックを2つ並べる
+
+○  
+
+``` html
+<table><tr><td>
+
+<!-- コードブロック -->
+
+</td><td>
+
+<!-- コードブロック -->
+
+</td>
+</tr>
+</table>
+```
+
+×  
+
+``` html
+<table>
+  <tr>
+    <td>
+      
+      ``` CPP
+      int left = 0.0;
+      ```
+
+    </td>
+    <td>
+
+      ``` CPP
+      double right = 0.0;
+      ```
+
+    </td>
+  </tr>
+</table>
+```
+
+[markdownで2つのコードを横並びにして表示することはでき...](https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q14258031544)  
+
+---
+
 ``` cs
     [HttpGet("GetInt/{id}")]
     public ActionResult<int?> GetInt(int? id)
