・整理 ・blazor crud

--- a/Article/ノウハウ.md
+++ b/Article/ノウハウ.md
@@ -43,3 +43,17 @@ Googleドキュメントでファイルを書き出す方法
 古いHDDのPCで起動時、HDD使用率が100%になる問題をある程度軽減できるというツイートを見かけたので、まとめる。  
 
 [マコトのおもちゃ箱　～ぼへぼへ自営業者の技術メモ～](http://piyopiyocs.blog115.fc2.com/blog-entry-480.html)
+
+---
+
+## Notepad++からGitBashを起動する方法
+
+1.gitを開いたときデフォルトの作業ディレクトリを開くようにする  
+<https://www.granfairs.com/blog/staff/gitbash-setting-shortcut>  
+git-bash.exeの本体からショートカットを作成する。  
+そのショートカットの作業フォルダーの項目に目的の作業ディレクトリのパスを設定する。  
+
+2.そのショートカットをNotepad++に登録する  
+メニューバーから「実行」を選択する。  
+「ファイル名を指定して実行」を選択して、①の作業で作成したショートカットを指定して「実行」して問題がなかったら「登録」する。  
+任意のショートカットキーを指定する。  
