--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1478,37 +1478,10 @@ pythonのバージョンを3.9にしろという記事。
 
 ---
 
-## フォルダ構成参考
+`<button type="button">`  
+[「戻る」ボタンを作るときは\<button type="button" >で。](https://qiita.com/hibikikudo/items/937d451bb6570a55a47c)  
 
-[DbUp](https://github.com/DbUp/DbUp)
-
-``` txt
-DbUp
-├─src
-│  ├─dbup
-│  ├─dbup.core
-│  ├─etc
-│  └─DbUp.sln
-├─lib
-├─docs
-├─license.txt
-└─README.md
-```
-
-[Evolve](https://github.com/lecaillon/Evolve)  
-
-``` txt
-Evolve
-├─src
-│  ├─Evolve.sln
-│  ├─Evolve.Cli
-│  └─Evolve.Tool
-├─sample
-├─test
-├─LICENSE
-├─Evolve.sln
-└─README.md
-```
+[ボタンは\<button>で実装しよう](https://qiita.com/sukoyakarizumu/items/978df93755c4720d5cdc)  
 
 ---
 
