・html、ボタンまとめ ・blazorでボタンでnavilinkする方法(引数つき) ・dotnet run でのswagger起動 ・where if

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1480,6 +1480,73 @@ pythonのバージョンを3.9にしろという記事。
 
 ---
 
+## 親クラスを実装した子クラスを親クラスの引数で渡しても全てのプロパティが入ってくる
+
+``` cs
+using System.Reflection;
+
+var parent = new Child1()
+{
+    Id = 1,
+    Name = "name",
+    Child1Prop = "child1prop"
+};
+
+var exconmega = new ExtendChildMega(parent);
+_ = exconmega.parent.Id;
+_ = exconmega.DateTime;
+
+var excon = new ExtendChild(parent);
+_ = 1;
+
+public class Parent
+{
+    public int Id { get; set; }
+    public string Name { get; set; } = null!;
+}
+
+public class Child1 : Parent
+{
+    public string Child1Prop { get; set; }
+}
+
+public class ExtendChild : Parent
+{
+    public string DateTime { get; set; }
+
+    public ExtendChild(Parent parent)
+    {
+        // 親クラスのプロパティ情報を一気に取得して使用する。
+        List<PropertyInfo> props = parent
+            .GetType()
+            .GetProperties(BindingFlags.Instance | BindingFlags.Public)
+            .ToList();
+        foreach (var prop in props)
+        {
+            var propValue = prop.GetValue(parent);
+            typeof(ExtendChild).GetProperty(prop.Name)?.SetValue(this, propValue);
+        }
+        var aa = this.GetType().GetProperty(nameof(this.Id));
+        var a22a = this.GetType().GetProperty("test");
+    }
+}
+
+public class ExtendChildMega
+{
+    public Parent parent { get; set; }
+    public string DateTime { get; set; }
+
+    public ExtendChildMega(Parent parent)
+    {
+        this.parent = parent;
+    }
+}
+```
+
+---
+
+---
+
 ``` cs
     [HttpGet("GetInt/{id}")]
     public ActionResult<int?> GetInt(int? id)
