--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1543,7 +1543,60 @@ public class ExtendChildMega
 }
 ```
 
+[Javaソースと見るUML入門](http://objectclub.jp/technicaldoc/uml/java2uml#1)  
+[WhereIf](https://www.extensionmethod.net/csharp/ienumerable-t/whereif)  
+[【C#】自作LINQオペレータの作り方](https://qiita.com/yutorisan/items/2c796841c6f047358c03)  
+
 ---
+
+``` cs
+using System;
+using System.Collections.Generic;
+using System.Linq;
+
+/// <summary>
+/// Linq拡張
+/// </summary>
+public static class LinqExtension
+{
+    /// <summary>
+    /// conditionがtrueの時、selectを実行します。
+    /// </summary>
+    /// <typeparam name="TSource"></typeparam>
+    /// <typeparam name="TResult"></typeparam>
+    /// <param name="source"></param>
+    /// <param name="condition"></param>
+    /// <param name="selector"></param>
+    /// <returns></returns>
+    public static IEnumerable<TResult> SelectIf<TSource, TResult>(this IEnumerable<TSource> source, bool condition, Func<TSource, TResult> selector)
+        => condition ? source.Select(selector) : (IEnumerable<TResult>)source;
+
+    /// <summary>
+    /// conditionがtrueの時、whereを実行します。
+    /// </summary>
+    /// <typeparam name="TSource"></typeparam>
+    /// <param name="source"></param>
+    /// <param name="condition"></param>
+    /// <param name="predicate"></param>
+    /// <returns></returns>
+    public static IEnumerable<TSource> WhereIf<TSource>
+        (this IEnumerable<TSource> source, bool condition, Func<TSource, bool> predicate)
+            => condition ? source.Where(predicate) : source;
+
+    /// <summary>
+    /// boolにって実行するwhereを切り替えます。
+    /// </summary>
+    /// <typeparam name="TSource"></typeparam>
+    /// <param name="source"></param>
+    /// <param name="condition"></param>
+    /// <param name="truePredicate"></param>
+    /// <param name="falsePredicate"></param>
+    /// <returns></returns>
+    public static IEnumerable<TSource> WhereIfElse<TSource>
+        (this IEnumerable<TSource> source, bool condition, Func<TSource, bool> truePredicate, Func<TSource, bool> falsePredicate)
+            => condition ? source.Where(truePredicate) : source.Where(falsePredicate);
+}
+```
 
 ---
 
@@ -1572,3 +1625,6 @@ public class ExtendChildMega
 - `asp.net` パイプライン  
 プロセス間通信  
 x86Extension  
+
+WPFとWEBAPIを同じソリューションに含めて実行する
+[Consume ASP.Net Core Web API Using HttpClient in WPF](https://www.youtube.com/watch?v=qb3o_PIwVUk)  
