・tooltip整理 ・builder,state整理 ・クラス図

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1501,5 +1501,8 @@ public class ExtendChildMega
 プロセス間通信  
 x86Extension  
 
-WPFとWEBAPIを同じソリューションに含めて実行する
+WPFとWEBAPIを同じソリューションに含めて実行する  
 [Consume ASP.Net Core Web API Using HttpClient in WPF](https://www.youtube.com/watch?v=qb3o_PIwVUk)  
+
+Calenderのカスタマイズ  
+[WPFのCalendarコントロールをカスタマイズ](https://iyemon018.hatenablog.com/?page=1484034348)  
