・整理 ・クラス図 ・文字コード ・Task

--- a/Article/メモ.md
+++ b/Article/メモ.md
@@ -143,6 +143,13 @@ urlに入力 → `data:text/html,<html contenteditable>`
 
 [不満は多いのに転職せず、圧倒的に「自己研鑽」しない日本人「会社辞めたい」と思った時、知っておきたい“強み”の見つけ方](https://logmi.jp/business/articles/326950)  
 
+なぜ新しい技術を使っていきたいのか？  
+・市場価値のため  
+・他でやっていける力をつけるため  
+・学ぶことが楽しいから  
+でもこれは、今の職場で学ぶことが何もなくなったり、圧倒的な成果を出すことが出来た時に考えることであって、現職で毎日学ぶことがあって楽しいならまだ早いと思う。  
+[転職・退職する前に考えてほしいこと](https://qiita.com/hiro-hiro/items/5d4f89cd30cf3e87bd61)  
+
 ---
 
 ## 平均的プログラマ以前向けのスキルの指標
