--- a/SystemDesign/設計.md
+++ b/SystemDesign/設計.md
@@ -14,6 +14,8 @@ https://speakerdeck.com/masuda220
 
 [システム設計入門](https://github.com/donnemartin/system-design-primer/blob/master/README-ja.md)  
 
+[技術選定/アーキテクチャ設計で後悔しないためのガイドライン](https://qiita.com/hirokidaichi/items/a746062917595619720b)  
+
 ---
 
 ## ユーザー視点
