--- a/Technology/文字コード.md
+++ b/Technology/文字コード.md
@@ -56,4 +56,26 @@ Unicode「しゃーない!!!使われてない2つの領域があるから、そ
 
 ---
 
-## 全各文字は何バイト？
+## 全角文字は何バイト？
+
+>【全角文字は何バイト？】  
+>知らない ... 論外  
+>2バイト ... 老害  
+>3バイト ... 及第点  
+>3～4バイト ... 合格  
+>KI/KO ... 引退勧告  
+><https://twitter.com/ito_yusaku/status/1605410137245569024>  
+
+<!--  -->
+>エンコーディングが Shift_JIS であれば半角文字を1バイト、全角文字を2バイトで符号化します。  
+>3バイト以上の文字は一つもありません。  
+>
+>エンコーディングが UTF-8 の場合は1文字を1〜6バイトで符号化します。  
+>半角文字は1バイトですが、全角文字は2〜6バイトとなります。  
+>
+>HTML文書やプログラムを記述する際、エンコーディングに UTF-8 を使う場面は少なくありません。  
+>ですから、一律に半角文字は1バイト、全角文字は2バイトと考えることはできません。  
+>
+>純粋に文字列のバイト数を知りたい場合、PHP では strlen を使用し、全角も1文字として文字数を数えたい場合は mb_strlen を使用します。  
+>UTF-8 でも Shift_JIS のように全角を2バイトとして文字を数えたい場合には、mb_convert_encoding を併用すると良いです。  
+>[全角文字が3バイト?! PHP で文字を数えるときの注意点](https://www.webmagazine.kakisiti.co.jp/?p=449)  
