--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -95,7 +95,15 @@ group by
 
 ## ER図 Git管理
 
-[tblsを使えば，ER図をgitで管理しやすい](https://zenn.dev/lightkun/articles/6caf17872b6521)
+er図をmermaidで記述してgit管理でも行けるはず。  
+管理するだけなので、A5M2によるDDLの出力などはできない。  
+スキーマを変更したらそのままDDL出力してそれをGit管理でもいいのではなかろうか？  
+
+[tblsを使えば，ER図をgitで管理しやすい](https://zenn.dev/lightkun/articles/6caf17872b6521)  
+
+## er diagram github
+
+[tblsとGitHub Actionsを使ってDBマイグレーションを含むPRには自動更新したER図を追加する](https://devblog.thebase.in/entry/auto_generated_er_graph_by_tbls_and_github_actions)  
 
 ---
 
@@ -111,12 +119,6 @@ group by
   - `.\`ではなく`./`  
 
 [Windows git-bash.exeでバッチファイルを実行](https://teratail.com/questions/100039)  
-
----
-
-## er diagram github
-
-[tblsとGitHub Actionsを使ってDBマイグレーションを含むPRには自動更新したER図を追加する](https://devblog.thebase.in/entry/auto_generated_er_graph_by_tbls_and_github_actions)  
 
 ---
 
@@ -229,6 +231,82 @@ public class ExtendChildMega
 
 ---
 
+## SELECT a.NULL FROM (SELECT NULL FROM テーブル名) a
+
+>SELECT NULL FROM テーブル名;  
+>はできるのに  
+>SELECT a.NULL FROM (SELECT NULL FROM テーブル名) a;  
+>はエラーになるんだね(´・ω・｀)  
+>a.NULLを列名扱いに出来ないらしい  
+><https://twitter.com/cc02041110/status/1605500362634715137>    
+
+SQLServer2022での検証。  
+
+とりあえずこういうデータがあるテーブルで実験  
+
+``` sql
+SELECT * FROM [SchemaVersions]
+
+-- Id | Name
+-- ---+---------------------------------------
+-- 1  | 001_Create_Table_TeacherMaster.sql
+-- 2  | 002_Create_Table_DesignationMaster.sql
+-- 3  | 003_Fill_DesignationMaster.sql
+```
+
+NULLにしたらレコード分が全部NULLになる。  
+
+``` sql
+SELECT NULL FROM [SchemaVersions]
+
+-- Id | Name
+-- ---+---------------------------------------
+-- 1  | NULL
+-- 2  | NULL
+-- 3  | NULL
+```
+
+Twitterの構文ではそもそもエラーとなり実行できない。
+
+``` sql
+-- NULL付近に不適切な構文があります。
+-- 'SQ'の列1に列が指定されませんでした。
+SELECT SQ.NULL FROM (SELECT NULL FROM [SchemaVersions]) AS [SQ]
+
+-- NULL付近に不適切な構文があります。
+SELECT SQ.NULL FROM (SELECT NULL AS TEST FROM [SchemaVersions]) AS [SQ]
+```
+
+列名を定義して、列名でアクセスすればもちろんいける。  
+
+``` sql
+SELECT SQ.TEST FROM (SELECT NULL AS TEST FROM [SchemaVersions]) AS [SQ]
+
+-- Id | Name
+-- ---+---------------------------------------
+-- 1  | NULL
+-- 2  | NULL
+-- 3  | NULL
+```
+
+---
+
+## setting・configuration・preference
+
+>これはUI/UXの観点から真面目になんとかしないといけない問題  
+>
+>• setting: 個別の設定、1つ1つを指す(ことがある)  
+>• configuration→システムの基礎をなす一部なので変更は慎重に  
+>• preference→エンドユーザーの好みだから気軽に変更して  
+>
+><https://twitter.com/acevif/status/1605356997897236481>  
+
+<!--  -->
+>settingは「設定」、preferencesは「（好みの）設定」、configurationは「構成」、optionは「（選択肢としての）設定」、initializationは「初期設定」みたいな意味の違いはあるけど、まとめて「設定」に訳されちゃうの、すげー分かる。  
+<https://twitter.com/rioriost/status/1605361577632624640>  
+
+---
+
 ``` cs
     [HttpGet("GetInt/{id}")]
     public ActionResult<int?> GetInt(int? id)
@@ -243,13 +321,6 @@ public class ExtendChildMega
 >[ようこそ Dapper 至上主義の DataAccess へ【#5 WPF MVVM L@bo】](https://elf-mission.net/programming/wpf/mvvm-labo/phase05/#DataAccess_Repository)  
 
 [superの呼び出し](https://bliki-ja.github.io/CallSuper/)  
-
-なぜ新しい技術を使っていきたいのか？  
-・市場価値のため  
-・他でやっていける力をつけるため  
-・学ぶことが楽しいから  
-でもこれは、今の職場で学ぶことが何もなくなったり、圧倒的な成果を出すことが出来た時に考えることであって、現職で毎日学ぶことがあって楽しいならまだ早いと思う。  
-[転職・退職する前に考えてほしいこと](https://qiita.com/hiro-hiro/items/5d4f89cd30cf3e87bd61)  
 
 - `asp.net` パイプライン  
 プロセス間通信  
