整理・参考追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -331,3 +331,59 @@ WPFとWEBAPIを同じソリューションに含めて実行する
 
 Calenderのカスタマイズ  
 [WPFのCalendarコントロールをカスタマイズ](https://iyemon018.hatenablog.com/?page=1484034348)  
+
+[新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
+
+[【Laravel】確認画面付きのお問い合わせフォームを作成する【メール送信対応】](https://into-the-program.com/laravel-create-contact-form/)
+[【 Laravel 】CRUD『 表示・登録・更新・削除 』機能をCODEを書かず自動作成（Beta版機能）](https://qiita.com/daisu_yamazaki/items/3755467b39ef158b81a3)
+[.NET 6とVSCodeでデスクトップアプリ（ランチャー）](https://qiita.com/Kosen-amai/items/61e6b03b8e0fccc35ee5)
+
+[PHP（サーバー）と C#（クライアント）で圧縮した文字列のやりとりをする](https://www.create-forever.games/php-csharp-gzip-encode-decode/)  
+[ASP.NET Core のミドルウェア](https://docs.microsoft.com/ja-jp/aspnet/core/fundamentals/middleware/?view=aspnetcore-6.0)  
+
+[イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
+
+[いま動いてるプロセスのユーザを知る方法ってあるでしょうか。](https://teratail.com/questions/247990)
+
+[NET Frameworkアプリケーションを64bit OS上で32bitモードで動かす方法(その2)](http://niyodiary.cocolog-nifty.com/blog/2009/05/net-framework-1.html)  
+
+[【WPF】フォーカス遷移について知っておきたい３つのキーワード](https://qiita.com/furugen/items/40dae26ef6684dac7fc7)  
+[修飾語](https://sho.benesse.co.jp/qat/j/23.html)  
+
+[変数の渡し方 ref out in](https://qiita.com/muniel/items/02de40a7d806a39b91c1)  
+[C#における値と参照](https://qiita.com/Tokeiya/items/365b3c5b613868f4c928)  
+
+[ストップforeach！LINQで集合/結合する](https://qiita.com/i-tanaka730/items/3e6b560e80f1395ae8ea)  
+
+[RESTとGraphQLについて](https://www.utakata.work/entry/2019/12/02/000000)
+[Reference Source .NET Framework 4.8](https://referencesource.microsoft.com/#System.Web,namespaces)  
+
+[C# の Web アプリで async/await を使わないとどれくらい性能劣化するか見てみよう(.NET Framework編)](https://zenn.dev/okazuki/articles/async-sync-webapi-dotnetfw)  
+
+モジュールはクラスの代替になるのか？  
+[第7回 VBのモジュールはオブジェクト指向に不要？](https://atmarkit.itmedia.co.jp/fdotnet/vbcheer/vbcheer07/vbcheer07.html)  
+
+[有名企業のエンジニア向け研修資料まとめ](https://qiita.com/KNR109/items/f3268b311e11d5b821c0)  
+
+curlってwindowsにも入ってるのな。
+[curl コマンド 使い方メモ](https://qiita.com/yasuhiroki/items/a569d3371a66e365316f)  
+
+[ncコマンドの使い方](https://hana-shin.hatenablog.com/entry/2021/12/18/203658)  
+
+[実践WPF業務アプリケーションのアーキテクチャ【概要編】 ～ マイクロソフト公式サンプルデータベースAdventureWorksを題材に](https://codezine.jp/article/detail/10727?p=7)  
+
+[UnityにおけるC#のGC Allocation（ヒープメモリ確保）パターンの紹介](https://creator.game.cyberagent.co.jp/?p=8645)  
+
+[Gitリモートリポジトリの作り方](https://qiita.com/onigra/items/326ba157d5552f0076be)
+
+[金融の基幹システムを1年半かけて.NET 6に移行した話](https://zenn.dev/nuits_jp/articles/2022-08-26-migration-to-net6)
+[特別な理由なしにgit-flowを新規採用するべきではない](https://qiita.com/ktateish/items/76ca0130aec3be05376c)  
+
+[３年間ソシャゲ開発に携わって、プログラムを書く上で大切だなと思ったこと](https://qiita.com/KyoheiOkawa/items/223368639b9a67c289d9#%E3%82%B3%E3%83%BC%E3%83%AB%E3%83%90%E3%83%83%E3%82%AF%E3%81%99%E3%82%8B%E3%81%A8%E3%81%8D%E3%81%AF%E6%B0%97%E3%82%92%E3%81%A4%E3%81%91%E3%82%8B)  
+
+[ローカル環境を汚さずDockerコンテナのオーバーヘッドもなく、開発環境を自在に構築できる「Devbox 0.2.0」登場](https://www.publickey1.jp/blog/22/dockerdevbox_020.html)  
+[プロフェッショナルSSL/TLS](https://www.lambdanote.com/collections/ssl-tls/products/tls)  
+[GraphQL で REST API を作る - 技術的な挑戦と、それを支える文化の話](https://tech.layerx.co.jp/entry/2022/12/19/230000)  
+[DBSJ最強データベース講義](https://www.youtube.com/@dbsj4040/videos)  
+
+[Git nowではじめるCommit駆動開発](https://qiita.com/k_tada/items/4b7ae126e6c5df2cb33c)
