・git now ・continuewith ・ビルダー

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -238,7 +238,7 @@ public class ExtendChildMega
 >SELECT a.NULL FROM (SELECT NULL FROM テーブル名) a;  
 >はエラーになるんだね(´・ω・｀)  
 >a.NULLを列名扱いに出来ないらしい  
-><https://twitter.com/cc02041110/status/1605500362634715137>    
+><https://twitter.com/cc02041110/status/1605500362634715137>  
 
 SQLServer2022での検証。  
 
@@ -386,4 +386,4 @@ curlってwindowsにも入ってるのな。
 [GraphQL で REST API を作る - 技術的な挑戦と、それを支える文化の話](https://tech.layerx.co.jp/entry/2022/12/19/230000)  
 [DBSJ最強データベース講義](https://www.youtube.com/@dbsj4040/videos)  
 
-[Git nowではじめるCommit駆動開発](https://qiita.com/k_tada/items/4b7ae126e6c5df2cb33c)
+[英語の「現在分詞」や「過去分詞」ってなに？英語学習の基礎を徹底解説](https://www.rarejob.com/englishlab/column/20190528/)  
