・null合体演算子の否定 ・タスクのキャンセル ・sql速度 ・整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -2,22 +2,25 @@
 
 ---
 
-## 継続的デリバリー復習
+## C# if or
 
-継続的デリバリー :  
-手動。本番環境にデプロイ可能な状態を保証する。  
-沢山デプロイするのは色々不都合がある場合もあるので、手動でデプロイする。  
+C# 9.0(.Net5)からパターンマッチングによって可能になった。  
 
-継続的デプロイメント :  
-自動。インテグレーションに問題が無かったら自動的にデプロイする。  
-コミットするたびなので頻度がヤバい。  
-なので継続的デリバリーという概念がある。  
+``` cs
+if (i is 2 or 3 or 5 or >= 10){}
+```
 
-継続的インテグレーション :  
-コミットをトリガーとして、ビルドとテストを実行する。  
+[【C#】複数のORをまとめて書けないか](https://shozo-gson.com/cs-alt-or/)  
 
-バージョン管理:  
-言わずもがな。  
+---
+
+## C#のVSCodeのデバッグでコンソールの入力を有効にする方法
+
+`.vscode`ディレクトリ配下にある`launch.json`の`"console":"internalConsole"`の部分を
+`"console":"externalTerminal"`に書き換える。  
+
+[Visual Studio Code で Console.ReadLineを使う方法](https://qiita.com/link_to_someone/items/2b7cb8747a34165b8c8e)  
+c# vscode debug console readline  
 
 ---
 
@@ -34,8 +37,6 @@ IFTTTで、設定したメールアドレスに対する特定のメールの受
 イベントを検知したら設定しているSwitchBotに点灯命令を送信する。  
 
 ---
-
-・なぜwhere inは重いのか
 
 sql where 仕組み
 [SELECT文の処理の仕組みを説明してみた。](https://nattou-curry-2.hatenadiary.org/entry/20090315/1237089749)
@@ -56,41 +57,6 @@ LEFT OUTER JOIN B ON oya
 
 でよいのでは説。
 
-
-・重複レコードを削除する方法
-　・Window関数を使った方法(rk where rk = 1)
-　・JOINを使った方法(A EXCEPT A JOIN B)
-
-あれ？単純にEXCEPTでいいのでは？
-SELECT AFiled,BField FROM A
-EXCEPT
-SELECT DISTINCT AField,BField FROM B
-
-あぁ、やらかしてるな。
-
-``` sql
-WITH TmpTable AS (
-    SELECT 1 AS ID, 1 AS RowNum, 'and seventy nine' AS [Data]
-    UNION
-    SELECT 1, 2, 'five hundred'
-    UNION
-    SELECT 1, 3, 'two thousand'
-)
-select
-    ID,
-    [Data]
-from
-    (SELECT * FROM TmpTable ORDER BY RowNum DESC ) t1
-group by
-    t1.ID
-
--- メッセージ 1033、レベル 15、状態 1、行 12
--- TOP、OFFSET、または FOR XML が指定されていない場合、ビュー、インライン関数、派生テーブル、サブクエリ、および共通テーブル式では ORDER BY 句は無効です。
-```
-
-ソートはかなり重い処理に分類されるため、基本的に一番最後に行う。  
-それだけで頻繁にやるべきでないことは分かるし、一番最後に出力する時にだけ行うべきってことが自然と分かるだろう。  
-
 ---
 
 ``` txt
@@ -106,6 +72,16 @@ DELETE    | DELETE | DELETE
 
 ---
 
+## 仕様書 マークダウン
+
+簡単な概要書 プログラム  
+マークダウン 仕様書 テンプレート  
+簡単な仕様書 マークダウン  
+
+[仕様書の参考例と、こんな内容を仕様書に最低書くといいというお話](https://note.com/tanabemg/n/na2db89a5cbda)  
+
+---
+
 ## テストコード
 
 [意識が高くないVisualStudioを使用した単体テストの自動化](https://qiita.com/mima_ita/items/05ce44c3eb1fd6e9dd46)  
@@ -116,71 +92,6 @@ DELETE    | DELETE | DELETE
 
 >レビューはエンジニアの好き嫌いとか最近興味がある技術とかなどの思いの丈を語る為に提供されたしゃべり場ではなく、成果物の品質が基準に達しているかを確認する場という事が分かっていない人がホント多いなというが最近の感想。  
 <https://twitter.com/komitsubo/status/1516544935423770624>  
-
----
-
-## 親クラスを実装した子クラスを親クラスの引数で渡しても全てのプロパティが入ってくる
-
-``` cs
-using System.Reflection;
-
-var parent = new Child()
-{
-    Id = 1,
-    Name = "name",
-    ChildProp = "child1prop"
-};
-
-var exconmega = new ExtendChildMega(parent);
-_ = exconmega.parent.Id;
-_ = exconmega.DateTime;
-
-var excon = new ExtendChild(parent);
-_ = 1;
-
-public class Parent
-{
-    public int Id { get; set; }
-    public string Name { get; set; } = null!;
-}
-
-public class Child : Parent
-{
-    public string ChildProp { get; set; }
-}
-
-public class ExtendChild : Parent
-{
-    public string DateTime { get; set; }
-
-    public ExtendChild(Parent parent)
-    {
-        // 親クラスのプロパティ情報を一気に取得して使用する。
-        List<PropertyInfo> props = parent
-            .GetType()
-            .GetProperties(BindingFlags.Instance | BindingFlags.Public)
-            .ToList();
-        foreach (var prop in props)
-        {
-            var propValue = prop.GetValue(parent);
-            typeof(ExtendChild).GetProperty(prop.Name)?.SetValue(this, propValue);
-        }
-        var aa = this.GetType().GetProperty(nameof(this.Id));
-        var a22a = this.GetType().GetProperty("test");
-    }
-}
-
-public class ExtendChildMega
-{
-    public Parent parent { get; set; }
-    public string DateTime { get; set; }
-
-    public ExtendChildMega(Parent parent)
-    {
-        this.parent = parent;
-    }
-}
-```
 
 ---
 
