--- a/DB_SQL/00_メモ.md
+++ b/DB_SQL/00_メモ.md
@@ -453,3 +453,38 @@ SELECT SQ.TEST FROM (SELECT NULL AS TEST FROM [SchemaVersions]) AS [SQ]
 -- 2  | NULL
 -- 3  | NULL
 ```
+
+---
+
+## 重複レコードを削除する方法
+
+- Window関数を使った方法(rk where rk = 1)  
+- EXCEPTを使った方法(A EXCEPT B)  
+- EXISTSを使った方法
+
+あれ？単純にEXCEPTでいいのでは？  
+SELECT AFiled,BField FROM A
+EXCEPT
+SELECT DISTINCT AField,BField FROM B
+
+---
+
+``` sql
+WITH TmpTable AS (
+    SELECT 1 AS ID, 1 AS RowNum, 'and seventy nine' AS [Data]
+    UNION
+    SELECT 1, 2, 'five hundred'
+    UNION
+    SELECT 1, 3, 'two thousand'
+)
+select
+    ID,
+    [Data]
+from
+    (SELECT * FROM TmpTable ORDER BY RowNum DESC ) t1
+group by
+    t1.ID
+
+-- メッセージ 1033、レベル 15、状態 1、行 12
+-- TOP、OFFSET、または FOR XML が指定されていない場合、ビュー、インライン関数、派生テーブル、サブクエリ、および共通テーブル式では ORDER BY 句は無効です。
+```
