--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -70,6 +70,34 @@ DELETE    | DELETE | DELETE
 
 [Repository Pattern](https://www.youtube.com/watch?v=x6C20zhZHw8)  
 
+PUT : 全てのリソースを変更  
+PATCH : 一部のリソース変更  
+
+以下のようなテーブルがあったとする。  
+
+``` cs
+class Hoge {
+    public int Id {get;set;}
+    public string Name {get;set;}
+    public string Description {get;set;}
+}
+```
+
+putは全て置き換えるので
+
+``` cs
+{
+    Name = "hoge"
+}
+```
+
+とした場合、IdとDescriptionはnullとなる。  
+Patchであれば、IdとDescriptionはそのままでNameだけ更新する形となる。  
+
+これが全てのリソースを変更するか一部のリソースを変更するかの違いとなる。  
+
+[PUTとPATCHの違いは何？](https://techblg.app/articles/difference-between-put-and-patch/)  
+
 ---
 
 ## 仕様書 マークダウン
@@ -92,6 +120,46 @@ DELETE    | DELETE | DELETE
 
 >レビューはエンジニアの好き嫌いとか最近興味がある技術とかなどの思いの丈を語る為に提供されたしゃべり場ではなく、成果物の品質が基準に達しているかを確認する場という事が分かっていない人がホント多いなというが最近の感想。  
 <https://twitter.com/komitsubo/status/1516544935423770624>  
+
+---
+
+## DI_相互参照
+
+- 中間サービスを挟む。  
+- 相互参照が発生したタイミングでその処理を別のサービスとして切り出す。  
+- 必要な処理だけメソッドインジェクションする。  
+
+[【Angular】お互いにDIしあっている（循環参照）と発生するエラー](https://www.l08084.com/entry/2018/06/09/170727)  
+[DIコンテナの本当の使いどころ](https://www.ulsystems.co.jp/archives/025.html)  
+
+---
+
+## 複合主キー
+
+4つで複合主キーとしているところで3つしか検索条件としない場合、インデックスは効くのか？  
+試してみた感じ、全てを含めたほうが、コストが低いことは観測出来た。  
+
+複合主キー 全部指定しないと効かない?  
+[複合主キーを避けるべき理由](https://torazuka.hatenablog.com/entry/20110713/pk)  
+[システム開発の本質とは～単独主キー主義 VS 複合主キー許容派～](https://talon.jp/info/345/)  
+
+## 複合インデックス
+
+>ここで問題になるのは複合インデクスの特徴の１つである、「キーとして構成されているカラムの全てが検索条件に指定されていなくても、キーの先頭から途中までのカラムが指定されていれば、インデクスが使われる」という点です。  
+>これにより、上記インデクスにおいて例えば、会社＝本社 かつ 生年月日＜1960/01/01のような検索条件を実行すると、「インデクス０」を参照して、「本社」のテーブルデータの「生年月日」を１つずつ検査する動きになります。  
+[データベース／複合インデックスの落とし穴](https://www.gatc.jp/gat/it/it02dbindex.html)  
+
+---
+
+## 実行計画_バッチ相対
+
+>バッチ相対は複数のクエリを相対比較したものになります。  
+>ひとつのクエリエディタ内で複数のクエリを実行する場合はバッチ相対の % 表示を利用して、相対的にどのクエリのコストが高いかを確認することができます。  
+>内部測定時間に基づいての比較となっているようなので、実際の実行時間で見た場合はコストが低くても時間がかかることがあると思いますが、一連の処理の中でどこを重点的に改善すればよいかの判断を使用するにはバッチ相対のコストを参考にするとよいかと思います。  
+>
+>[Management Studio で実行プランを確認した際のコストについて](https://blog.engineer-memo.com/2012/07/08/management-studio-%E3%81%A7%E5%AE%9F%E8%A1%8C%E3%83%97%E3%83%A9%E3%83%B3%E3%82%92%E7%A2%BA%E8%AA%8D%E3%81%97%E3%81%9F%E9%9A%9B%E3%81%AE%E3%82%B3%E3%82%B9%E3%83%88%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6/)  
+
+sqlserver 実行プラン バッチ相対
 
 ---
 
@@ -173,3 +241,9 @@ curlってwindowsにも入ってるのな。
 [プロフェッショナルSSL/TLS](https://www.lambdanote.com/collections/ssl-tls/products/tls)  
 [GraphQL で REST API を作る - 技術的な挑戦と、それを支える文化の話](https://tech.layerx.co.jp/entry/2022/12/19/230000)  
 [DBSJ最強データベース講義](https://www.youtube.com/@dbsj4040/videos)  
+
+dto デザインパターン  
+[【デザインパターン】DAO/DTOパターン](http://www.code-magagine.com/?p=1311)  
+
+rest postのみ  
+[内部的な ajax リクエストは全部 POST でいいと思った](http://var.blog.jp/archives/79981429.html)  
